syntax = "proto3";

package api;

message Error {
  string error_message = 1;
  string error_details = 2;
}
